# wave-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  application.md  demo.sh  demo.tape  main.py  package.json  pyproject.toml  start.sh  supervisord.conf  wave-server.desktop
.github/workflows/: ci.yml  pr-review.yml
agents/: merge.md  spec-writer-enterprise.md  spec-writer-hack.md  spec-writer-standard.md  spec-writer.md  test-writer.md  wave-planner.md  wave-verifier.md  worker.md
dashboard/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json
docs/: api.md  architecture.md  github-apps.md  github-auth.md  pi-wave-dashboard-spec.md  worktree-isolation-plan.md
scripts/: smoke_continuation.py
skills/wave-server/: SKILL.md
specs/: pi-runner.md
tests/: conftest.py  pi_test_helpers.py  test_api.py  test_dag.py  test_e2e_execution.py  test_enforcement.py  test_engine.py  test_execution_lifecycle.py  test_execution_logger.py  test_execution_manager.py  test_feature_executor.py  test_git_worktree.py  test_live_execution.py  test_log_parser.py  test_model_selection.py  test_parallel_execution.py  test_pi_runner.py  test_plan_parser.py  test_preflight.py  test_quick_fix.py  test_rate_limit.py  test_rerun.py  test_runner.py  test_standalone_promote.py  test_storage.py  test_task_log_api.py  test_task_log_search.py  test_task_log_storage.py  test_verify_fix.py  test_worktree_integration.py
wave_server/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  storage.py
(+50 files in other folders)
